// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Courses test courseform should be showed after a click on a button "Add New Course" 1`] = `
<div
  className="wrapper"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label>
      <input
        placeholder="Enter undefined..."
        type="text"
      />
    </label>
    <button>
      Search
    </button>
  </form>
  <button>
    Add New Course
  </button>
</div>
`;

exports[`Courses test should render Courses component properly 1`] = `
<div
  className="wrapper"
>
  <div
    className="wrapper"
  >
    <form
      className="form"
      onSubmit={[Function]}
    >
      <label>
        <input
          placeholder="Enter undefined..."
          type="text"
        />
      </label>
      <button>
        Search
      </button>
    </form>
    <button
      onClick={[Function]}
    >
      Add New Course
    </button>
  </div>
  <div
    className="wrapper"
    data-testid="course"
  >
    <div
      className="courseDesc"
    >
      <h2>
        JavaScript
      </h2>
      <p>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum 
                    has been the industry's standard dummy text ever since the 1500s, when an unknown 
                    printer took a galley of type and scrambled it to make a type specimen book. It has survived 
                    not only five centuries, but also the leap into electronic typesetting, remaining essentially u
                    nchanged.
      </p>
    </div>
    <div
      className="courseInfoWrapper"
    >
      <div
        className="courseInfo"
      >
        <div>
          <span>
            Autors: 
          </span>
          <p>
            Vasiliy Dobkin, Nicolas Kim
          </p>
        </div>
        <div>
          <span>
            Duration: 
          </span>
          <p>
            2 : 40 hours
          </p>
        </div>
        <div>
          <span>
            Created: 
          </span>
          <p>
            08.03.2021
          </p>
        </div>
      </div>
      <div
        className="buttonsWrapper"
      >
        <button
          onClick={[Function]}
        >
          Show Course
        </button>
        <button
          onClick={[Function]}
        >
          delete
        </button>
        <button
          onClick={[Function]}
        >
          update
        </button>
      </div>
    </div>
  </div>
  <div
    className="wrapper"
    data-testid="course"
  >
    <div
      className="courseDesc"
    >
      <h2>
        Angular
      </h2>
      <p>
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum 
                    has been the industry's standard dummy text ever since the 1500s, when an unknown 
                    printer took a galley of type and scrambled it to make a type specimen book.
      </p>
    </div>
    <div
      className="courseInfoWrapper"
    >
      <div
        className="courseInfo"
      >
        <div>
          <span>
            Autors: 
          </span>
          <p>
            Anna Sidorenko, Valentina Larina
          </p>
        </div>
        <div>
          <span>
            Duration: 
          </span>
          <p>
            3 : 30 hours
          </p>
        </div>
        <div>
          <span>
            Created: 
          </span>
          <p>
            10.11.2020
          </p>
        </div>
      </div>
      <div
        className="buttonsWrapper"
      >
        <button
          onClick={[Function]}
        >
          Show Course
        </button>
        <button
          onClick={[Function]}
        >
          delete
        </button>
        <button
          onClick={[Function]}
        >
          update
        </button>
      </div>
    </div>
  </div>
</div>
`;
